Update the frontend component to build a product page and use the recommendation service to provide product recommendations.

--- a/frontend/templates/home.html
+++ b/frontend/templates/home.html
@@ -19,7 +19,7 @@
           <div class="col-md-4">
             <div class="card mb-4 box-shadow">
               <a href="/product/{{.Item.Id}}">
-                <img class="card-img-top" alt="" style="width: 100%; height: auto;" src="{{ .Item.Picture }}">
+                <img class="card-img-top" alt="{{ .Item.Name }}" style="width: 100%; height: auto;" src="{{ .Item.Picture }}">
               </a>
               <div class="card-body">
                 <h5 class="card-title">{{ .Item.Name }}</h5>
